--- a/css/contact.css
+++ b/css/contact.css
@@ -12,7 +12,7 @@
 }
 
 .contact-text h2 {
-    font-size: 3rem;
+    font-size: 97px;
     font-weight: bold;
     color: #1f2937;
     margin-bottom: 20px;
