--- a/css/stats.css
+++ b/css/stats.css
@@ -18,7 +18,7 @@
 }
 
 .stats-title {
-    font-size: 2.2rem;
+    font-size: 38px;
     font-weight: bold;
     color: #1f2937;
     margin-bottom: 50px;
@@ -40,7 +40,7 @@
 }
 
 .stat-number {
-    font-size: 4rem;
+    font-size: 80px;
     font-weight: bold;
     color: #6366f1;
     margin-bottom: 10px;
